Placeholder test added. Minor bugs in word generation fixed.

--- a/CV.Management.Web/Resources.lv.resx
+++ b/CV.Management.Web/Resources.lv.resx
@@ -315,4 +315,7 @@
   <data name="Year" xml:space="preserve">
     <value>Gads</value>
   </data>
+  <data name="AdditionalCommentsPlaceholder" xml:space="preserve">
+    <value>Papildus komentāri</value>
+  </data>
 </root>
