Missing placeholders added. Bugfixes here and there.

--- a/CV.Management.Web/Resources.resx
+++ b/CV.Management.Web/Resources.resx
@@ -325,7 +325,7 @@
     <value>City, country</value>
   </data>
   <data name="KeyTasksPlaceholder" xml:space="preserve">
-    <value>Key Tasks and responsibilities (Please write each in new line);&amp;#x0a; •Task no 1;&amp;#x0a; •Responsibility no 2;&amp;#x0a; •Task no 3;&amp;#x0a; •Etc.</value>
+    <value>Key Tasks and responsibilities (Please write each in new line);\n •Task no 1;\n •Responsibility no 2;\n •Task no 3;\n •Etc.</value>
   </data>
   <data name="LogOff" xml:space="preserve">
     <value>Log off</value>
