--- a/CV.Management.Web/Resources.resx
+++ b/CV.Management.Web/Resources.resx
@@ -187,7 +187,7 @@
     <value>Speciality, degree</value>
   </data>
   <data name="DirectSubordinates" xml:space="preserve">
-    <value>Direct and indirect subordinates (numbers and functions)</value>
+    <value>Direct and indirect subordinates (numbers and functions, if you have no, leave blank)</value>
   </data>
   <data name="Education" xml:space="preserve">
     <value>Education &amp; qualifications</value>
@@ -196,10 +196,10 @@
     <value>Email</value>
   </data>
   <data name="FromTime" xml:space="preserve">
-    <value>From (mm.yyyy)</value>
+    <value>From (YYYY)</value>
   </data>
   <data name="FromYear" xml:space="preserve">
-    <value>Period from (yyyy)</value>
+    <value>Period from (YYYY)</value>
   </data>
   <data name="FullName" xml:space="preserve">
     <value>Full name</value>
@@ -274,7 +274,7 @@
     <value>Profile</value>
   </data>
   <data name="Project" xml:space="preserve">
-    <value>Project</value>
+    <value>Project (if you are not part of existing assignment, please indicate desired position)</value>
   </data>
   <data name="ReasonForLeaving" xml:space="preserve">
     <value>Reason for leaving (leave blank if you still work there)</value>
@@ -291,17 +291,17 @@
   <data name="Save" xml:space="preserve">
     <value>Save</value>
   </data>
-  <data name="Skype" xml:space="preserve">
-    <value>Skype</value>
+  <data name="OtherInformation" xml:space="preserve">
+    <value>Other contact information</value>
   </data>
   <data name="SpokenLevel" xml:space="preserve">
     <value>Spoken</value>
   </data>
   <data name="ToTime" xml:space="preserve">
-    <value>To (mm.yyyy)</value>
+    <value>To (YYYY)</value>
   </data>
   <data name="ToYear" xml:space="preserve">
-    <value>Period to (yyyy)</value>
+    <value>Period to (YYYY)</value>
   </data>
   <data name="Trainer" xml:space="preserve">
     <value>Training company, trainer</value>
@@ -335,5 +335,11 @@
   </data>
   <data name="PhoneCodePlaceholder" xml:space="preserve">
     <value>Country code</value>
+  </data>
+  <data name="AdditionalFiles" xml:space="preserve">
+    <value>Additional files (certificates, motivation letter, etc.)</value>
+  </data>
+  <data name="InvalidYear" xml:space="preserve">
+    <value>Invalid year!</value>
   </data>
 </root>
