--- a/CV.Management.Web/Resources.lv.resx
+++ b/CV.Management.Web/Resources.lv.resx
@@ -342,4 +342,10 @@
   <data name="Present" xml:space="preserve">
     <value>Šobrīd</value>
   </data>
+  <data name="TurnoverExample" xml:space="preserve">
+    <value>piemēram, 30 MEUR (2018)</value>
+  </data>
+  <data name="TurnoverPlaceholder" xml:space="preserve">
+    <value>X EUR (YYYY)</value>
+  </data>
 </root>
