Translation in UI

--- a/CV.Management.Web/Resources.lv.resx
+++ b/CV.Management.Web/Resources.lv.resx
@@ -348,4 +348,7 @@
   <data name="TurnoverPlaceholder" xml:space="preserve">
     <value>X EUR (YYYY)</value>
   </data>
+  <data name="SaveNotice" xml:space="preserve">
+    <value>Jūsu dati tika veiksmīgi saglabāti!</value>
+  </data>
 </root>
