--- a/CV.Management.Web/Resources.resx
+++ b/CV.Management.Web/Resources.resx
@@ -354,4 +354,7 @@
   <data name="SaveNotice" xml:space="preserve">
     <value>Your data was saved successfully!</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete picture</value>
+  </data>
 </root>
