--- a/CV.Management.Web/Resources.resx
+++ b/CV.Management.Web/Resources.resx
@@ -387,4 +387,13 @@
   <data name="RightsReserved" xml:space="preserve">
     <value>All rights reserved.</value>
   </data>
+  <data name="ByRegistering" xml:space="preserve">
+    <value>By registering you accept our</value>
+  </data>
+  <data name="Privacy2" xml:space="preserve">
+    <value>Privacy policy</value>
+  </data>
+  <data name="AcceptPrivacyPolicyError" xml:space="preserve">
+    <value>You must accept our privacy policy to register</value>
+  </data>
 </root>
